# AI-IDE-BAS

./: .dockerignore  .env  .gitignore  CHANGELOG.md  GITHUB_COMMANDS_STATUS.md  GITHUB_TELEMETRY_STATUS.md  MVP_0.md  README.md  custom_modes.yaml  package.json  pnpm-lock.yaml  test-github-commands.js  test-github-commands.md
.cursor/rules/: next.mdc  test.mdc  ts.mdc
.github/workflows/: _archived_posthog-alerts.yml  _archived_posthog-analyze.yml  _archived_posthog-setup.yml
ai_ide_bas_main/: .gitignore  CHANGELOG.md  README.md  extension-build-config.json  package.json  pnpm-lock.yaml
ai_ide_bas_main/src/: .gitignore  .vscodeignore  esbuild.mjs  extension.ts  models.ts  package.json  package.nls.ca.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.hi.json  package.nls.id.json  package.nls.it.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.nl.json  package.nls.pl.json  package.nls.pt-BR.json  package.nls.ru.json  package.nls.tr.json  package.nls.vi.json  package.nls.zh-CN.json  package.nls.zh-TW.json  turbo.json
docs/: POSTHOG_INSIGHTS.md  POSTHOG_INSIGHTS_QUICK.md
pii-masking-proxy/: README.md  docker-compose.yml  mock-pii-data.txt
pii-masking-proxy/presidio-anonymizer/: .gitignore  Dockerfile  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
pii-masking-proxy/presidio-anonymizer/app/: config.py
pii-masking-proxy/presidio-anonymizer/app/application/: service.py
pii-masking-proxy/presidio-anonymizer/app/conf/: default.yaml  default_analyzer.yaml  default_recognizers.yaml
pii-masking-proxy/presidio-anonymizer/app/interface/: api.py
scripts/: send-vsix-build-event.js
src/: .env  esbuild.mjs  extension.ts  package.json  package.nls.json  package.nls.ru.json
testig/: Use_case_sharing.md
webview-ui/: vite.config.ts
(+537 files in other folders)
