[project]
name = "presidio-pii-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "blis>=0.7.11",
    "catalogue>=2.0.10",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "cloudpathlib>=0.23.0",
    "confection>=0.1.5",
    "cymem>=2.0.13",
    "fastapi>=0.115.2",
    "filelock>=3.20.3",
    "flask>=3.1.2",
    "gunicorn>=25.0.1",
    "h11>=0.16.0",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "langcodes>=3.5.1",
    "langdetect>=1.0.9",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "murmurhash>=1.0.15",
    "numpy>=1.26.4",
    "packaging>=26.0",
    "phonenumbers>=8.13.55",
    "preshed>=3.0.12",
    "presidio-analyzer>=2.2.352",
    "presidio-anonymizer>=2.2.352",
    "pybind11>=3.0.1",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pyyaml>=6.0.3",
    "regex>=2024.9.11",
    "requests>=2.32.5",
    "requests-file>=3.0.1",
    "rich>=14.3.2",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smart-open>=7.5.0",
    "spacy>=3.7.5",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "srsly>=2.5.2",
    "starlette>=0.40.0",
    "thinc>=8.2.5",
    "tldextract>=5.3.1",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
    "typer-slim>=0.21.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "uvicorn>=0.30.6",
    "wasabi>=1.1.3",
    "weasel>=0.4.3",
    "wrapt>=2.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "requests>=2.32.5",
    "ruff>=0.6.9",
]
